src/test/deca/context/invalid/opBool-icompatible.context
opBool-icompatible.deca:2:
